<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AdminKoperasiActivity">

    <LinearLayout
        android:background="@color/blue_600"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_unit_bisnis" />

            <TextView
                android:id="@+id/txt_unit_bisnis"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/warung_soto_bu_iing"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/koperasi_sekolah" />

            <TextView
                android:id="@+id/txt_koperasi"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/sma_muhammadiyah_2_pamulang"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="@string/yayasan" />

            <TextView
                android:id="@+id/txt_yayasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:textColor="@color/white"
                android:text="@string/dikdasmen_muh_tangerang"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_daftarpesanan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/online_shopping_resizeable"
                android:background="?colorPrimary"
                android:layout_marginVertical="5dp"
                android:paddingStart="20dp"
                android:text="Daftar Pesanan"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_lappenjualan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/online_shopping_resizeable"
                android:background="?colorPrimary"
                android:layout_marginVertical="5dp"
                android:paddingStart="20dp"
                android:text="LAPORAN PENJUALAN"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_management"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp"
                android:paddingStart="20dp"
                android:drawableLeft="@drawable/checklist_resizeable"
                android:background="?colorPrimary"
                android:text="Manajemen Produk"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_stock"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp"
                android:background="?colorPrimary"
                android:drawableLeft="@drawable/user_resizeable"
                android:paddingStart="20dp"
                android:text="Manajemen Stok"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="5dp"
                android:background="?colorPrimary"
                android:drawableLeft="@drawable/logout_resizeable"
                android:paddingStart="20dp"
                android:text="Logout"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentAdminContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>